--- a/client/src/App.css
+++ b/client/src/App.css
@@ -107,9 +107,28 @@ hr {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  margin: 10px;
 }
 .Logo{
   display: flex;
   flex-direction: row;
   justify-content: center;
+}
+
+.Header2{
+  display: flex;
+  flex-direction:row;
+  justify-content:space-between;
+  padding: 1.5rem;
+  border: 3px solid rgb(221, 16, 16);
+}
+.Header2 strong{
+  margin-left: 2rem;
+  font-size: 25px;
+}
+.img{
+  display: flex;
+  justify-content: center;
+  margin: 15px;
+  height: 190px;
 }
