--- a/client/src/App.css
+++ b/client/src/App.css
@@ -118,17 +118,40 @@ hr {
 .Header2{
   display: flex;
   flex-direction:row;
-  justify-content:space-between;
-  padding: 1.5rem;
+  justify-content:start;
+  padding: 2rem;
   border: 3px solid rgb(221, 16, 16);
+  border-radius: 9px;
 }
 .Header2 strong{
   margin-left: 2rem;
-  font-size: 25px;
+  font-size: 24px;
 }
 .img{
   display: flex;
   justify-content: center;
   margin: 15px;
-  height: 190px;
+  height: 200px;
+  border: 2px solid rgb(221, 16, 16);
+  
+  border-radius: 9px;
+}
+.Infos{
+  display: flex;
+  flex-direction:column;
+  justify-content:space-between;
+  padding: 1.5rem;
+  margin: 10px;
+  border: 2px solid rgb(221, 16, 16);
+  border-radius: 9px;
+
+}
+.Type{
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 24px;
+  margin-left: 2rem;
+}
+.Type:hover{
+  text-decoration: underline;
 }
