--- a/src/App.css
+++ b/src/App.css
@@ -168,7 +168,7 @@ hr {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(133, 133, 133, 0.8); /* Fundo semi-transparente para o efeito de desfoque */
+    background: rgba(133, 133, 133, 0.8); 
     backdrop-filter: blur(2px); 
     display: flex;
     justify-content: center;
@@ -177,7 +177,7 @@ hr {
   }
   
   .confirm-container {
-    background-color: #fff; /* Cor de fundo da div de confirmação */
+    background-color: #fff; 
     padding: 20px;
     border-radius: 10px;
     text-align: center;
