--- a/src/PokemonInfo.css
+++ b/src/PokemonInfo.css
@@ -103,88 +103,34 @@ hr {
   margin: 2rem auto;
 }
 
-.Pokemon-buttons {
+.Infos{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: row;
+    
+    justify-content: space-around;
     align-items: center;
-    margin: 10px;
-}
-
-.Pokemon-buttons button {
-    margin: 0.5rem;
-    width: 35%; 
-}
-
-.Logo{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-    align-items: center;
-}
-
-.Header2{
-  display: flex;
-  flex-direction:row;
-  justify-content:start;
-  padding: 2rem;
-  border: 3px solid rgb(221, 16, 16);
-  border-radius: 9px;
-}
-.Header2 strong{
-  margin-left: 2rem;
-  font-size: 24px;
 }
 .img{
   display: flex;
-  justify-content: center;
+  justify-content:start;
   margin: 15px;
-  height: 200px;
+  height: 150px;
   border: 2px solid rgb(221, 16, 16);
   
   border-radius: 9px;
 }
-.Infos{
-  display: flex;
-  flex-direction:column;
-  justify-content:space-between;
-  padding: 1.5rem;
-  margin: 10px;
-  border: 2px solid rgb(221, 16, 16);
-  border-radius: 9px;
 
-}
-.Type{
+.stats{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content:space-around;
   font-weight: bold;
-  text-decoration: none;
-  font-size: 24px;
-  margin-left: 2rem;
 }
-.Type:hover{
-  text-decoration: underline;
+.ability{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content:space-around;
+  font-weight: bold;
 }
-.container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(133, 133, 133, 0.8); 
-    backdrop-filter: blur(2px); 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-  }
-  
-  .confirm-container {
-    background-color: #fff; 
-    padding: 40px;
-    border-radius: 10px;
-    text-align: center;
-  }
-  .stats{
-    font-weight: bold;
-  }
-  
-  
