--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,9 @@ hr {
     align-items: center;
     margin: 10px;
 }
+.Pokemon-buttons button{
+  box-shadow: 5px 5px lightblue;
+}
 
 .Pokemon-buttons button {
     margin: 0.5rem;
@@ -182,6 +185,12 @@ hr {
     flex-direction: row;
     margin: 10px;
     
+  }
+  .pesquisar input{
+    box-shadow: 10px 10px lightblue;
+  }
+  .pesquisar button{
+    box-shadow: 10px 10px lightblue;
     
   }
   .pesquisar ::placeholder{
