--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@
 *::before {
   box-sizing: border-box;
 }
+*{
+  text-decoration: none;
+}
 
 html {
   --font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
@@ -110,6 +113,10 @@ hr {
     justify-content: center;
     align-items: center;
     margin: 10px;
+    animation-name: top;
+    animation-duration: 0.5s;
+   
+  animation-fill-mode: forwards;
 }
 .Pokemon-buttons button{
   box-shadow: 5px 5px lightblue;
@@ -123,12 +130,14 @@ hr {
   width: 40%; 
 }
 
-.Logo{
+.Titulo{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 35px;
 }
+
 
 .Header2{
   display: flex;
@@ -200,7 +209,51 @@ hr {
     margin-left: 20px;
     
   }
+  .Menu :hover{
+    color: rgb(240, 14, 25);
+    animation-name: fonteAnim;
+    animation-duration: 0.3s;
+    animation-fill-mode: forwards;
+    text-decoration: underline;
+  }
+.active{
+  color: rgb(204, 10, 20);
   
+}
+.active:hover{
+  color: rgb(204, 10, 20);
+  animation-name: fonteAnim;
+  animation-duration: 0.4s;
+  animation-fill-mode: forwards;
+  text-decoration: underline;
+}
+.Menu{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content:space-evenly;
+  font-weight: bold;
+  border: 2px solid rgb(221, 16, 16);
+  border-radius: 9px;
+  padding: 15px;
+  margin-left: 100px;
+  margin-right: 100px;
+  box-shadow: 10px 10px lightblue;
+  /* animation-name: top;
+  animation-duration: 2s;
+  animation-delay: 2s;
+  animation-fill-mode: forwards; */
+}
 
-  
-  
+
+
+@keyframes fonteAnim {
+  0%   {}
+  100% {font-size: 23px;}
+}
+@keyframes top {
+  0%   {margin-left: 200px;
+        opacity: 0;
+  }
+  100% { opacity: 1;}
+}
